# test_repo111

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  links.py  manage.py  pyproject.toml  railway.json
.github/workflows/: deployment.yml  testing.yml
api/: admin.py  filter.py  models.py  serializers.py  urls.py  views.py
api/helm-values/finelo/: prod.yaml
api/migrations/: 0001_initial.py
bilim_ai/: asgi.py  settings.py  urls.py  wsgi.py
helm-values/aiko-dev/: prod.yaml  staging.yaml
helm-values/coursiv/: prod.yaml  staging.yaml
helm-values/coursiv-jr/: prod.yaml
